I just fixed the fonts UI, also added the needed ui to complement the VM data, and correct some issues at vm

--- a/ElPraGato/ElPraGato/Info.plist
+++ b/ElPraGato/ElPraGato/Info.plist
@@ -4,9 +4,8 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Poppins-Bold.ttf</string>
+		<string>Poppins-Medium.ttf</string>
 		<string>Poppins-Regular.ttf</string>
-		<string>Poppins-Italic.ttf</string>
 	</array>
 </dict>
 </plist>
